fixed issue with text getting cropped.

--- a/xCheckStudio/Webviewer/src/prompts/Load_Data.css
+++ b/xCheckStudio/Webviewer/src/prompts/Load_Data.css
@@ -172,7 +172,7 @@
 	top: 3px;
 	overflow: hidden;
 	width: 91px;
-	height: 20px;
+	height: 24px;
 	text-align: center;
 	font-family: Montserrat;
 	font-style: normal;
@@ -202,7 +202,7 @@
 	top: 3px;
 	overflow: hidden;
 	width: 107.505px;
-	height: 20px;
+	height: 24px;
 	text-align: center;
 	font-family: Montserrat;
 	font-style: normal;
@@ -232,7 +232,7 @@
 	top: 3px;
 	overflow: hidden;
 	width: 91px;
-	height: 20px;
+	height: 24px;
 	text-align: center;
 	font-family: Montserrat;
 	font-style: normal;
